[package]
name = "simpleice"
version = "0.1.0"
authors = ["Rafael Medina García <rafamedgar@gmail.com>"]
license = "MIT"
repository = "https://github.com/rmed/simpleice"
readme = "README.md"
keywords = ["emergency", "email", "scheduled"]
categories = ["command-line-utilities", "email"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.19"
console = "0.5.0"
dialoguer = "0.1.0"
lettre = "0.6.2"
rust-ini = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
